fix header spacing

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -50,7 +50,8 @@ header {
 
 .header-greeting {
   display: flex;
-  width: 150px;
   align-items: center;
-  justify-content: space-between;
+  a:first-of-type {
+    margin-right: 15px;
+  }
 }
